Actions
Bug #11984
closedlibproc: passing argument 2 to restrict-qualified parameter aliases with argument 1
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
Build errors with gcc 8:
../common/Pzone.c: In function 'Pfindmap': ../common/Pzone.c:800:28: error: passing argument 2 to restrict-qualified parameter aliases with argument 1 [-Werror=restrict] if ((len = readlink(buf, buf, sizeof (buf))) > 0) { ~~~ ^~~ cc1: all warnings being treated as errors
As noted by Robert, this function is used by pmap:
tsoome@beastie:/code/illumos-gate/usr/src/boot$ pmap $$ 24792: /bin/bash 0000000000400000 1252K r-x-- /usr/bin/bash 0000000000549000 40K rw--- /usr/bin/bash 0000000000553000 40K rw--- /usr/bin/bash 0000000001499000 1496K rw--- [ heap ] FFFFFD7FEE545000 340K r-x-- /lib/amd64/ld.so.1 FFFFFD7FEE5AA000 12K rwx-- /lib/amd64/ld.so.1 FFFFFD7FEE5AD000 8K rwx-- /lib/amd64/ld.so.1 FFFFFD7FEE9E0000 1564K r-x-- /lib/amd64/libc.so.1 FFFFFD7FEEB77000 48K rw--- /lib/amd64/libc.so.1 FFFFFD7FEEB83000 16K rw--- /lib/amd64/libc.so.1 FFFFFD7FEEDF0000 436K r-x-- /usr/lib/amd64/libncurses.so.5.9 FFFFFD7FEEE6D000 20K rw--- /usr/lib/amd64/libncurses.so.5.9 FFFFFD7FEEE90000 64K rwx-- [ anon ] FFFFFD7FEEF80000 4K rwx-- [ anon ] FFFFFD7FEEFA0000 24K rwx-- [ anon ] FFFFFD7FEEFD0000 64K rwx-- [ anon ] FFFFFD7FEEFF9000 4K rwxs- [ anon ] FFFFFD7FEF000000 4K rwx-- [ anon ] FFFFFD7FEF080000 4K rwx-- [ anon ] FFFFFD7FEF1B0000 4K rw--- [ anon ] FFFFFD7FEF320000 4K rwx-- [ anon ] FFFFFD7FEF350000 4K rwx-- [ anon ] FFFFFD7FEF360000 32K r-x-- /lib/amd64/libgen.so.1 FFFFFD7FEF378000 4K rw--- /lib/amd64/libgen.so.1 FFFFFD7FEF380000 4K rwx-- [ anon ] FFFFFD7FEF3D0000 4K rw--- [ anon ] FFFFFD7FEF3F0000 4K r--s- FFFFFD7FFFDEE000 72K rw--- [ stack ] total 5572K tsoome@beastie:/code/illumos-gate/usr/src/boot$ pmap -x $$ 24792: /bin/bash Address Kbytes RSS Anon Locked Mode Mapped File 0000000000400000 1252 1180 - - r-x-- bash 0000000000549000 40 40 8 - rw--- bash 0000000000553000 40 28 12 - rw--- bash 0000000001499000 1496 1492 80 - rw--- [ heap ] FFFFFD7FEE545000 340 340 - - r-x-- ld.so.1 FFFFFD7FEE5AA000 12 12 8 - rwx-- ld.so.1 FFFFFD7FEE5AD000 8 8 - - rwx-- ld.so.1 FFFFFD7FEE9E0000 1564 1564 - - r-x-- libc.so.1 FFFFFD7FEEB77000 48 48 16 - rw--- libc.so.1 FFFFFD7FEEB83000 16 12 - - rw--- libc.so.1 FFFFFD7FEEDF0000 436 208 - - r-x-- libncurses.so.5.9 FFFFFD7FEEE6D000 20 20 - - rw--- libncurses.so.5.9 FFFFFD7FEEE90000 64 16 - - rwx-- [ anon ] FFFFFD7FEEF80000 4 4 4 - rwx-- [ anon ] FFFFFD7FEEFA0000 24 20 4 - rwx-- [ anon ] FFFFFD7FEEFD0000 64 64 - - rwx-- [ anon ] FFFFFD7FEEFF9000 4 4 - - rwxs- [ anon ] FFFFFD7FEF000000 4 4 4 - rwx-- [ anon ] FFFFFD7FEF080000 4 4 - - rwx-- [ anon ] FFFFFD7FEF1B0000 4 4 - - rw--- [ anon ] FFFFFD7FEF320000 4 4 4 - rwx-- [ anon ] FFFFFD7FEF350000 4 4 4 - rwx-- [ anon ] FFFFFD7FEF360000 32 32 - - r-x-- libgen.so.1 FFFFFD7FEF378000 4 4 - - rw--- libgen.so.1 FFFFFD7FEF380000 4 4 4 - rwx-- [ anon ] FFFFFD7FEF3D0000 4 4 4 - rw--- [ anon ] FFFFFD7FEF3F0000 4 4 - -r--s- FFFFFD7FFFDEE000 72 72 4 - rw--- [ stack ] ---------------- ---------- ---------- ---------- ---------- total Kb 5572 5200 156 - tsoome@beastie:/code/illumos-gate/usr/src/boot$
Updated by Electric Monk almost 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 69d9b1c5b0824b6e4feadaf289d68d945f0fbe6f
commit 69d9b1c5b0824b6e4feadaf289d68d945f0fbe6f Author: Toomas Soome <tsoome@me.com> Date: 2019-12-02T21:13:20.000Z 11984 libproc: passing argument 2 to restrict-qualified parameter aliases with argument 1 Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions