11984 libproc: passing argument 2 to restrict-qualified parameter aliases with argument 1 Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>